# RecSys_project

./: .gitignore  README.md  pyproject.toml
ctr_prediction/: baseline_lgbm.ipynb
data/: loader.py
notebooks/: 00_implicit_example.ipynb  01_eda.ipynb  eda.ipynb
src/data/: loader.py
src/model/: cf_base.py  popularity.py
src/utils/: evaluate.py  logging_utils.py  utils.py
