[project]
name = "recsys-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.1",
    "implicit>=0.7.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "mlflow>=3.5.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
